--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,14 +8,40 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        # dialect: org.hibernate.dialect.MySQL8Dialect
-        dialect: org.hibernate.dialect.PostgreSQLDialect # PostgreSQL
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        # dialect: org.hibernate.dialect.PostgreSQLDialect # PostgreSQL
         show_sql: true
         format_sql: true
+  # Security
+#  security:
+#    user:
+#      name: ${SECURITY_USER}
+#      password: ${SECURITY_PASSWORD}
   # 데이터소스
   datasource:
     # driver-class-name: com.mysql.cj.jdbc.Driver # MySQL
-    # driver-class-name: org.postgresql.Driver # PostgreSQL
+    driver-class-name: org.postgresql.Driver # PostgreSQL
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+# JWT
+jwt:
+  # openssl rand -base64 32
+  secret: ${JWT_SECRET}
+  expiration-ms: ${JWT_EXPIRATION_MS} # 1시간
+# Swagger
+# 여러 가지 설정 on-off 및 dev, prod 분기
+springdoc:
+  swagger-ui:
+    # enabled: true # 개발 환경에선
+    enabled: false # 배포 환경에선
+  api-docs:
+    # enabled: true # 개발 환경에선
+    enabled: false # 배포 환경에선
+# 객체 스토리지
+#supabase:
+#  url: ${SUPABASE_URL}
+#  access-key: ${SUPABASE_ACCESS_KEY}
+#  pdf-bucket-name: ${SUPABASE_PDF_BUCKET_NAME}
+#  sheet-bucket-name: ${SUPABASE_SHEET_BUCKET_NAME}
+#  img-bucket-name: ${SUPABASE_IMG_BUCKET_NAME}
