--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,8 +8,8 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        # dialect: org.hibernate.dialect.PostgreSQLDialect # PostgreSQL
+        # dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect # PostgreSQL
         show_sql: true
         format_sql: true
   # Security
